faq done + photos updated

--- a/faq/static/styles/faq.css
+++ b/faq/static/styles/faq.css
@@ -114,15 +114,18 @@
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
-  cursor: pointer;
+  cursor: default;
 }
 .answer_div svg {
   margin: 7px 40px 0 0;
   align-self: flex-start;
   transition: transform 0.5s ease;
   /* Анимация переворота */
-  width: 30px;
-  height: 21px;
+  cursor: pointer;
+  min-width: 60px;
+  max-width: 60px;
+  min-height: 21px;
+  max-height: 21px;
 }
 .answer_div svg path {
   transition: fill 0.5s ease;
@@ -172,6 +175,7 @@
 .answer_span {
   font-weight: 700;
   letter-spacing: 2px;
+  cursor: pointer;
 }
 .response_span {
   max-height: 0;
@@ -217,7 +221,6 @@
 .consultation {
   color: #FFFFFF;
   font-family: 'Ubuntu', sans-serif;
-  font-weight: bold;
   align-self: flex-start;
   line-height: 40px;
   letter-spacing: 0.838px;
@@ -230,22 +233,22 @@
 }
 @media only screen and (min-width: 980px) and (max-width: 1199px) {
   .consultation {
-    font-size: 25px;
+    font-size: 18px;
   }
 }
 @media only screen and (min-width: 769px) and (max-width: 979px) {
   .consultation {
-    font-size: 25px;
+    font-size: 18px;
   }
 }
 @media only screen and (min-width: 640px) and (max-width: 768px) {
   .consultation {
-    font-size: 25px;
+    font-size: 18px;
   }
 }
 @media only screen and (max-width: 639px) {
   .consultation {
-    font-size: 25px;
+    font-size: 18px;
   }
 }
 /* endregion Консультация */
