dark mode BANNED

--- a/main/static/styles/base.css
+++ b/main/static/styles/base.css
@@ -17,6 +17,9 @@ a {
   box-sizing: border-box;
   content: none;
 }
+:root {
+  color-scheme: only light;
+}
 /*#endregion Обнуление*/
 /* region Скролл */
 /* Применить стили к корневому элементу <body> */
