--- a/main/templates/main/html/base.html
+++ b/main/templates/main/html/base.html
@@ -34,6 +34,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=.35">
+    <meta name="color-scheme" content="only light">
     <title>{% block title %} {% endblock %}</title>
 
     {% block links %} {% endblock %}
