frontend dynamic team done

--- a/main/static/styles/index.css
+++ b/main/static/styles/index.css
@@ -403,28 +403,41 @@
   line-height: 40px;
   letter-spacing: 0.525px;
 }
-.masters_first {
-  display: grid;
-  gap: 25px;
+/* Обновленные стили для .group и .masters_first */
+.group {
+  display: flex;
   justify-content: center;
-  align-content: center;
+  align-items: flex-start;
+  /* Выровнять элементы вверху */
+  gap: 25px;
+  /* Расстояние между элементами */
+  width: 100%;
+  box-sizing: border-box;
 }
-.masters_first > div {
+.masters_first {
+  display: flex;
+  flex-wrap: wrap;
+  /* Разрешить перенос элементов на следующую строку */
+  justify-content: flex-start;
+  gap: 25px;
+  /* Расстояние между элементами */
+}
+.master {
   position: relative;
 }
-.masters_first img {
+.master img {
   max-width: 379px;
   height: auto;
   transition: filter 0.3s ease;
   cursor: pointer;
 }
-.masters_first div:hover img {
+.master:hover img {
   filter: brightness(0.4);
 }
-.masters_first > div:hover div {
+.master:hover div {
   opacity: 1;
 }
-.masters_first > div div {
+.master div {
   position: absolute;
   display: flex;
   flex-direction: column;
@@ -448,34 +461,6 @@
   font-size: 14px;
   color: #797979;
   cursor: pointer;
-}
-/* Large Desktops */
-@media only screen and (min-width: 1200px) {
-  .masters_first {
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-  }
-}
-/* Medium Desktops */
-@media only screen and (min-width: 980px) and (max-width: 1199px) {
-  .masters_first {
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-  }
-}
-/* Small Desktops */
-@media only screen and (min-width: 769px) and (max-width: 979px) {
-  .masters_first {
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-  }
-}
-/* Landscape Phones */
-@media only screen and (min-width: 640px) and (max-width: 768px), (max-width: 639px) {
-  .masters_first {
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-  }
 }
 /*#endregion Наша команда*/
 /*#region Скидки и акции*/
