models updated, preloader done, favicon added

--- a/main/templates/main/html/index.html
+++ b/main/templates/main/html/index.html
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
     <link type="image/x-icon" href="static/source/common/logo.ico" rel="shortcut icon">
+    <meta name="description" content="Тату салон в Самаре. Мы работаем более 7 лет и действительно хорошо разбираемся в татуировке.">
 {% endblock %}
 
 {% block css %}
@@ -99,7 +100,7 @@
     </div>
 
     <div class="team" id="team">
-        <h2>НАША КОМАНДА</h2>
+        <h2>НАШИ МАСТЕРА</h2>
 
         <span class="team_signature">
             Интересуют работы конкретного мастера?
