--- a/main/static/styles/base.css
+++ b/main/static/styles/base.css
@@ -51,6 +51,44 @@ html {
   background: #0F1010;
 }
 /* endregion Скролл */
+/* region Preloader */
+.preloader {
+  position: fixed;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background: #0F1010;
+  z-index: 2;
+  transition: 0.3s all;
+  opacity: 1;
+  visibility: visible;
+}
+.preloader .loader {
+  width: 75px;
+  height: 75px;
+  border: 5px solid #FFFFFF;
+  border-radius: 50%;
+  border-top-color: #797979;
+  left: 50%;
+  top: 50%;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  animation: 1s spin infinite linear;
+}
+.preloader.done {
+  opacity: 0;
+  visibility: hidden;
+}
+@keyframes spin {
+  from {
+    transform: translate(-50%, -50%) rotate(0deg);
+  }
+  to {
+    transform: translate(-50%, -50%) rotate(360deg);
+  }
+}
+/* endregion Preloader */
 /*#region Header*/
 header {
   width: 100%;
