--- a/main/static/styles/base.less
+++ b/main/static/styles/base.less
@@ -104,6 +104,49 @@ html {
 
 /* endregion Скролл */
 
+/* region Preloader */
+
+.preloader {
+  position: fixed;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background: @globalBackground;
+  z-index: 2;
+  transition: .3s all;
+  opacity: 1;
+  visibility: visible;
+
+  .loader {
+    width: 75px;
+    height: 75px;
+    border: 5px solid @white;
+    border-radius: 50%;
+    border-top-color: @viewPortfolio;
+    left: 50%;
+    top: 50%;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    animation: 1s spin infinite linear;
+  }
+
+  &.done {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+
+@keyframes spin {
+  from {
+    transform: translate(-50%, -50%) rotate(0deg);
+  }
+  to {
+    transform: translate(-50%, -50%) rotate(360deg);
+  }
+}
+/* endregion Preloader */
+
 /*#region Header*/
 
 header {
